Honor the IFF_MONITOR flag.

PR:		kern/99500
Submitted by:	Craig Leres <leres ee.lbl.gov>
Approved by:	re (kensmith)

Former-commit-id: ada5e66d4a051c121cab00375fe51f48d58e1728